<resources>
    <string name="app_name">Concesionario</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="concesionario">Concesionario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresa_el_n_mero_de_placa_y_la_contrase_a">Ingresa el número de placa y la contraseña</string>
    <string name="n_mero_de_placa">Número de placa</string>
    <string name="het345">HET345</string>
    <string name="contrase_a">Contraseña</string>
    <string name="jhon_doe">Jhon Doe</string>
    <string name="ingresar">Ingresar</string>
    <string name="vas_a_registrar_una_placa">¿Vas a registrar una placa?</string>
    <string name="registrar">Registrar</string>
    <string name="regresar">Regresar</string>
    <string name="por_favor_ingresa_los_datos_del_veh_culo">Por favor ingresa los datos del vehículo</string>
    <string name="modelo_del_veh_culo">Modelo del vehículo</string>
    <string name="marca_del_veh_culo">Marca del vehículo</string>
    <string name="precio_del_veh_culo">Precio del vehículo</string>
    <string name="verifica_la_contrase_a">Verifica la contraseña</string>
    <string name="limpiar_campos">Limpiar campos</string>
    <string name="consultar_placa">Consultar placa</string>
    <string name="registrar_veh_culo">Registrar vehículo</string>
    <string name="vender">Vender</string>
    <string name="modificar_datos">Modificar datos</string>
    <string name="estos_son_los_datos_del_veh_culo">Estos son los datos del vehículo</string>
    <string name="necesitas_registrar_un_veh_culo">¿Necesitas registrar un vehículo?</string>
</resources>