<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/cp_blue"
            android:padding="30dp">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/perfil"
                android:contentDescription="@string/imagen_de_perfil" />

            <TextView
                android:id="@+id/tvConcesionario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/ivProfile"
                android:fontFamily="@font/archivo_narrow"
                android:includeFontPadding="false"
                android:text="@string/concesionario"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBienvenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvConcesionario"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/ivProfile"
                android:fontFamily="@font/archivo_narrow"
                android:includeFontPadding="false"
                android:text="@string/bienvenido"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="-35dp">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvSaludo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/source_sans_pro"
                        android:includeFontPadding="false"
                        android:text="@string/ingresa_el_n_mero_de_placa_y_la_contrase_a"
                        android:textSize="16sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n_mero_de_placa">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/coche"
                    android:drawablePadding="10sp"
                    android:inputType="text"
                    android:maxLength="6"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10sp"
                    android:fontFamily="@font/source_sans_pro"
                    android:inputType="textPassword"
                    android:text="">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btIngresar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/cp_blue"
                android:fontFamily="@font/archivo_narrow"
                android:text="@string/ingresar"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="Ingresar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tvRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:gravity="center"
                android:text="@string/necesitas_registrar_un_veh_culo"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btRegistrar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/ca_blue"
                android:fontFamily="@font/archivo_narrow"
                android:text="@string/registrar"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="Registrar"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
