<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@color/cp_blue"
            android:padding="20dp">

            <Button
                android:id="@+id/btBackMain"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/cp_blue"
                android:drawableStart="@drawable/arrow_back"
                android:drawablePadding="10dp"
                android:text="@string/regresar"
                android:textSize="16sp"
                android:fontFamily="@font/archivo_narrow"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:onClick="Regresar"/>

            <TextView
                android:id="@+id/tvDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btBackMain"
                android:fontFamily="@font/archivo_narrow"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:includeFontPadding="false"
                android:text="@string/por_favor_ingresa_los_datos_del_veh_culo"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDatos"
                android:textColorHint="@color/white"
                android:hint="@string/n_mero_de_placa">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/car_number"
                    android:drawablePadding="10sp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:fontFamily="@font/source_sans_pro"
                    android:inputType="text"
                    android:maxLength="6"
                    android:text="">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="-35dp">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/source_sans_pro"
                        android:includeFontPadding="false"
                        android:text="Datos del vehículo"
                        android:textSize="16sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modelo_del_veh_culo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/coche"
                    android:drawablePadding="10sp"
                    android:fontFamily="@font/source_sans_pro"
                    android:inputType="text"
                    android:text="">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marca_del_veh_culo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/brand"
                    android:drawablePadding="10sp"
                    android:fontFamily="@font/source_sans_pro"
                    android:inputType="text"
                    android:text="">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio_del_veh_culo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/dollar"
                    android:drawablePadding="10sp"
                    android:fontFamily="@font/source_sans_pro"
                    android:inputType="number"
                    android:maxLength="9"
                    android:text="">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etIngPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10sp"
                    android:fontFamily="@font/source_sans_pro"
                    android:inputType="textPassword"
                    android:text="">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verifica_la_contrase_a">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etVerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10sp"
                    android:fontFamily="@font/source_sans_pro"
                    android:inputType="textPassword"
                    android:text="">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btLimpiar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:backgroundTint="@color/cp_blue"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/limpiar_campos"
                android:textColor="@color/grey"
                android:textSize="17sp"
                android:onClick="Limpiar"/>

            <Button
                android:id="@+id/btConsultar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/cp_blue"
                android:fontFamily="@font/archivo_narrow"
                android:text="@string/consultar_placa"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="Consultar"/>

            <Button
                android:id="@+id/btRegistrarV"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/ca_blue"
                android:fontFamily="@font/archivo_narrow"
                android:text="@string/registrar_veh_culo"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="Registrar"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>